tests/parse_print/random_perturb/enum_liberated/change-02/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/change-02/change-02.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/change-02/change-02.essence:1:10:
  |
1 | language EssBnce 1.3
  |          ^^^^^^^
Syntax Error: Not a valid language name
